--- a/d1.html
+++ b/d1.html
@@ -1065,8 +1065,8 @@ function processdata(error, usstates, trips, simi, tripcount,statename, maxvote,
  queue()
     .defer(d3.json,"https://gist.githubusercontent.com/dkrathi457/968ded0a926dfebd17f5c028cd30becb/raw/6a56c5ac1e9321ecff38bff2071e63fd6f84f9f7/us.json")
     .defer(d3.json , "https://gist.githubusercontent.com/dkrathi457/d2b67d780ffd4f9f167da4f8a94623ca/raw/d1757329dff109dcd7a0b5515789b46da52b87e1/primaryresults.json")
-    .defer(d3.json, "http://www.cis.umassd.edu/~dkoop/dsc530/a3/us-states.geojson")
-     .defer(d3.json, "http://www.cis.umassd.edu/~dkoop/dsc530/a3/trips.json")
+    .defer(d3.json, "https://gist.githubusercontent.com/dkrathi457/f1b139170c8d0db752e41906d9cdc216/raw/3a181d755ec50a1b2ea98362a5e60fef6c94ff65/us-states.geojson")
+     .defer(d3.json, "https://gist.githubusercontent.com/dkrathi457/0f3115d34900338034541f41bbf7a291/raw/7b08ea577a6f29e6f4587fb4601da4c6160e805b/trips.json")
      .defer(d3.json, "https://gist.githubusercontent.com/dkrathi457/1ace2e96b73a0d65df84cf1ed3580495/raw/f0fa291bb6673de5034261385058e1d9fbebfdc1/statename.json")
      .defer(d3.csv, "https://gist.githubusercontent.com/dkrathi457/37fd7f1623f8c70a3ab69bc571c6bb4d/raw/8d090d1d4bb1c40cf1d08722f06e0d758d1621b0/maxvotecounty.csv")
      .defer(d3.csv, "https://gist.githubusercontent.com/dkrathi457/ccba9c1c5c08c0e633ecac7ab16ab01a/raw/4053443e311b175de551b526ce814ebc45e00d53/countyfacts.csv")
